[package]
name = "rust_source_bundler"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.99", features = ["full", "visit-mut"] }
quote = "1.0.21"
rust-format = { version = "0.3.4", features = ["token_stream"] }
anyhow = "1.0.62"

