[package]
name = "rust_source_bundler"
version = "0.2.2"
edition = "2021"
description = "Library to bundle local Rust library source files into a single file"
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/adam-bates/rust_source_bundler"

[dependencies]
syn = { version = "1.0.99", features = ["full", "visit-mut"] }
quote = "1.0.21"
rust-format = { version = "0.3.4", features = ["token_stream"] }
anyhow = "1.0.62"

